@@ -1,3 +1,8 @@
+Sun Jan  9 15:20:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSGAttributedString.m: ([-attributesAtIndex:effectiveRange:])
+	fixed illegal parameter - reported by jagapen@whitewater.chem.wisc.edu
+
 Wed Jan  5 16:22:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Source/NSData.m: when serializing selectors, cope with untyped
